# madhouse

./: .gitmodules  CMakeLists.txt  main.cpp
API/: client.hpp  server.hpp  textmsg_server.hpp
client/: CMakeLists.txt
client/inc/: SDLRAII.hpp  client.hpp  client_world.hpp  graphics.hpp
modules/ida_glogic_mod/: CMakeLists.txt
modules/ida_glogic_mod/inc/: ida_glogic_mod.hpp
modules/ida_glogic_mod/src/: ida_glogic_mod.cpp
modules/ida_map_mod/: CMakeLists.txt
modules/ida_map_mod/inc/: ida_map_mod.hpp
modules/ida_map_mod/src/: ida_map_mod.cpp
modules/ida_tank_mod/inc/: ida_tank_mod.hpp
modules/map/inc/: ia_map_plugin.hpp
plugins/client/npc/: CMakeLists.txt
plugins/client/npc/inc/: script1.hpp  script2.hpp  script3.hpp
plugins/client/npc/src/: script1.cpp  script2.cpp  script3.cpp
plugins/server/general_logic/: CMakeLists.txt
plugins/server/general_logic/inc/: general_logic.hpp  ia_general_logic_plugin.hpp
plugins/server/inc/: server.hpp
plugins/server/map/inc/: IAMapPlugin.hpp  ia_map_plugin.hpp
plugins/server/special_logic/tank/: CMakeLists.txt
plugins/server/special_logic/tank/inc/: TankLogicPlugin.hpp  tank.hpp
server/: CMakeLists.txt
server/inc/: server.hpp  server_network.hpp
server_plugins/map/: CMakeLists.txt
